tests/fixtures/fail/generic_parameter_moved_twice.sc
let invalid(T: type)(value: T): T = {
  let first = value
  value
}

let main(): i32 = { 42 }
